<resources>
    <string name="app_name">drivermodule</string>
    <string name="home">Home</string>
    <string name="add_persion">Add Details</string>
    <string name="view">View</string>
    <string name="string_view">View</string>
    <string name="string_string_view">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="a">home</string>
    <string name="b">Add</string>
    <string name="c">view</string>
    <string name="longi">longi</string>
    <string name="textview">TextView</string>
    <string name="get_location">Get Location</string>
    <string name="location">Location</string>
    <string name="title_activity_mapviewfragment">mapviewfragment</string>
    <string name="conntion">Conntion</string>
    <string name="scan_to_connect">Scan to connect</string>
    <string name="cardview2">cardview2</string>
    <string name="cardview1">cardview1</string>
    <string name="scan">Scan</string>
    <string name="connected">Connected</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="string_mailhint">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="signup">Signup</string>
    <string name="conpassword">Confirm password</string>
    <string name="addprofile">ADD Profile</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">H.NO/Street</string>
    <string name="postal">Postal Code</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
    <string name="LicenceNo">Licence No</string>
    <string name="country">Country</string>
    <string name="create">"create table if not exists "</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="delete">Delete</string>
    <string name="updateprofile">Update Profie</string>
    <string name="phono">Phono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starting">Sharing</string>
    <string name="MAPS_API_KEY">AIzaSyCp2tBlrboXh6QSWGCcHg2MpGTeBqV5IUY</string>
    <string name="title_activity_mapactivity">mapactivity</string>
    <string name="todo">sharesvg</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_location">Share Location</string>
    <string name="stop">stop</string>
    <string name="map">Map</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="logoutbtn">logoutbtn</string>
    <string name="logout">Logout</string>


    <string name="about">About :</string>

    <string name="about_text">This project is developed by Sabarinathan C Mca final year \"820420622035\". This project is helping to commercialize vehicle transport services and combined drivers and customers.</string>

    <!-- Checkout activity -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
</resources>