<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/activitybg"
    android:padding="5sp"
    tools:context=".profileadd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="301dp"
            android:layout_height="800dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingTop="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/dname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/licence"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/LicenceNo"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="5sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:text="@string/date_of_birth"
                android:textSize="16dp"
                tools:ignore="RtlSymmetry,SpUsage" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="301dp"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5sp"

                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/textfieldbg"
                    android:ems="10"
                    android:hint="@string/dd"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="12sp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/textfieldbg"
                    android:ems="10"
                    android:hint="@string/mm"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="12sp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/textfieldbg"
                    android:ems="10"
                    android:hint="@string/yy"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="12sp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"

                android:hint="@string/example_gmail_com"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/phonenu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/phono"
                android:inputType="phone"
                android:padding="5dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="date|textMultiLine|text"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/postal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"

                android:hint="@string/postal"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/dist"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/district"
                android:importantForAutofill="no"
                android:inputType="date|textMultiLine|text"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/state"
                android:importantForAutofill="no"
                android:inputType="date|textMultiLine|text"
                android:minHeight="48dp"
                android:padding="5sp" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/country"
                android:importantForAutofill="no"
                android:inputType="date|textMultiLine|text"
                android:minHeight="48dp"
                android:padding="5sp" />

            <Button
                android:id="@+id/submitbtn"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btnbg"
                android:text="@string/submit"
                android:textColor="@color/white" />

            <view
                android:id="@+id/view"
                class="androidx.appcompat.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>