<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybg"
    tools:context=".firstfragment" >

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="@drawable/btnbg"
        android:padding="10sp"
        android:stateListAnimator="@android:anim/fade_in"

        android:text="@string/share_location"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stopbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"

        android:background="@drawable/btnbg"
        android:clickable="false"
        android:padding="10sp"
        android:stateListAnimator="@android:animator/fade_in"
        android:text="@string/stop"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sharebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mapbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="17dp"
        android:background="@drawable/btnbg"
        android:padding="10sp"
        android:text="@string/map"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/stopbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="319dp"
        android:layout_height="286dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="46dp"
        android:contentDescription="@string/scan"
        android:src="@drawable/locview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
