<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/activitybg"
    android:layout_height="match_parent"
    tools:context=".loginactivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="244dp"
        android:layout_height="224dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc" />

    <EditText
        android:id="@+id/drivermail"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textfieldbg"
        android:ems="10"
        android:hint="@string/string_mailhint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/driverpassword"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textfieldbg"

        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drivermail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/driverloginbtn"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbg"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverpassword" />

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="227dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="108dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>