<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybg"
    tools:context=".secondfragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewcard"


        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/deleteimg"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview1"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/delete"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/delete" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/writeviewcard"

        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addcard"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img3"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview1"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/pen"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/addprofile" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/addcard"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img1"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview2"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/qrscan"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/scan" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/updatecard"

        android:layout_width="134dp"
        android:layout_height="125dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewcard"
        app:layout_constraintTop_toBottomOf="@+id/writeviewcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/updateimg"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview1"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/update"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/updateprofile" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>